// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`presetToDesignMd > converts the brutalist preset (zero motion, hard shapes) 1`] = `
"---
version: alpha
name: Brutalist
description: Bloomberg Terminal meets Swiss poster - bold red accent, dramatic typography, thick structural borders
colors:
  primary: "#cc0000"
  secondary: "#ffffff"
  tertiary: "#cc0000"
  background: "#ffffff"
  surface: "#ffffff"
  elevated: "#ffffff"
  foreground: "#000000"
  foreground-muted: "#888888"
  border: "#000000"
  error: "#cc0000"
  on-primary: "#ffffff"
typography:
  headline-display:
    fontFamily: "'Arial Black', 'Helvetica Neue', Impact, sans-serif"
    fontSize: 3rem
    fontWeight: 900
    lineHeight: 1
  headline-lg:
    fontFamily: "'Arial Black', 'Helvetica Neue', Impact, sans-serif"
    fontSize: 2.25rem
    fontWeight: 900
    lineHeight: 1
  headline-md:
    fontFamily: "'Arial Black', 'Helvetica Neue', Impact, sans-serif"
    fontSize: 1.875rem
    fontWeight: 900
    lineHeight: 1
  headline-sm:
    fontFamily: "'Arial Black', 'Helvetica Neue', Impact, sans-serif"
    fontSize: 1.5rem
    fontWeight: 900
    lineHeight: 1
  body-lg:
    fontFamily: "'Helvetica Neue', Arial, sans-serif"
    fontSize: 1.125rem
    fontWeight: 400
    lineHeight: 1.5
  body-md:
    fontFamily: "'Helvetica Neue', Arial, sans-serif"
    fontSize: 1rem
    fontWeight: 400
    lineHeight: 1.5
  body-sm:
    fontFamily: "'Helvetica Neue', Arial, sans-serif"
    fontSize: 0.875rem
    fontWeight: 400
    lineHeight: 1.5
  label-md:
    fontFamily: "'Helvetica Neue', Arial, sans-serif"
    fontSize: 0.875rem
    fontWeight: 700
    lineHeight: 1.25
  label-sm:
    fontFamily: "'Helvetica Neue', Arial, sans-serif"
    fontSize: 0.75rem
    fontWeight: 700
    lineHeight: 1.25
  label-strong:
    fontFamily: "'Helvetica Neue', Arial, sans-serif"
    fontSize: 1rem
    fontWeight: 700
    lineHeight: 1.25
  code-md:
    fontFamily: "'Courier New', Courier, monospace"
    fontSize: 0.875rem
    fontWeight: 400
    lineHeight: 1.5
  display-xxl:
    fontFamily: "'Arial Black', 'Helvetica Neue', Impact, sans-serif"
    fontSize: 4.5rem
    fontWeight: 900
    lineHeight: 1
rounded:
  none: 0px
  sm: 0px
  md: 0px
  lg: 0px
  xl: 0px
  2xl: 0px
  full: 9999px
spacing:
  base: 1rem
  xs: 0.25rem
  sm: 0.5rem
  md: 1rem
  lg: 1.5rem
  xl: 2rem
  2xl: 3rem
  3xl: 4rem
  section: 6rem
components:
  button-primary:
    backgroundColor: "{colors.primary}"
    textColor: "{colors.on-primary}"
    rounded: "{rounded.md}"
    padding: "{spacing.md}"
    typography: "{typography.label-strong}"
  button-secondary:
    backgroundColor: "{colors.secondary}"
    textColor: "{colors.foreground}"
    rounded: "{rounded.md}"
    padding: "{spacing.md}"
    typography: "{typography.label-strong}"
  button-destructive:
    backgroundColor: "{colors.error}"
    textColor: "{colors.on-primary}"
    rounded: "{rounded.md}"
    padding: "{spacing.md}"
    typography: "{typography.label-strong}"
  input-default:
    backgroundColor: "{colors.surface}"
    textColor: "{colors.foreground}"
    borderColor: "{colors.border}"
    rounded: "{rounded.md}"
    padding: "{spacing.sm}"
    typography: "{typography.body-md}"
  card-default:
    backgroundColor: "{colors.surface}"
    textColor: "{colors.foreground}"
    rounded: "{rounded.lg}"
    padding: "{spacing.lg}"
  badge-default:
    backgroundColor: "{colors.surface}"
    textColor: "{colors.foreground-muted}"
    rounded: "{rounded.full}"
    padding: "{spacing.xs}"
    typography: "{typography.label-sm}"
---

# Brutalist

## Overview

Brutalist is the anti-skin preset. Zero radii, zero shadows, motion disabled at the component level. Blocks of solid color, hard typography, system-default fonts. For experimental, editorial, or art-directed surfaces where the design system should disappear.

Comfortable density on a strict grid: 16px base, no rounding, no transition between states.

## Colors

Brutalist centers on a single \`primary\` accent (\`#cc0000\`) on a \`background\` of \`#ffffff\`. Every accent / surface / foreground pair below has been measured against WCAG 2.1 contrast ratios; ratios at or above 4.5:1 clear AA at body size.

### WCAG contrast pairs

| Pair | Foreground | Background | Ratio | AA body | AA large |
| --- | --- | --- | --- | --- | --- |
| foreground on background | \`#000000\` | \`#ffffff\` | 21.00 | pass | pass |
| foreground on surface | \`#000000\` | \`#ffffff\` | 21.00 | pass | pass |
| foreground-muted on background | \`#888888\` | \`#ffffff\` | 3.54 | fail | pass |
| on-primary on primary | \`#ffffff\` | \`#cc0000\` | 5.89 | pass | pass |
| border on background | \`#000000\` | \`#ffffff\` | 21.00 | pass | pass |

## Typography

Display set in **Arial Black** for headline weight and presence; body in **Helvetica Neue** for sustained reading; **Courier New** for code, telemetry, and tabular data. Sizes use \`clamp()\` for fluid scaling between 320px and 1536px viewports so layouts settle without breakpoint-specific overrides.

Eleven typography levels are emitted in the front matter, grouped as headlines (display, lg, md, sm), body (lg, md, sm), labels (md, sm, strong), and code (md). Display runs as large as the 7xl scale token allows; the \`display-xxl\` level captures it.

## Layout

A 5-breakpoint grid: 640px (sm) -> 768px (md) -> 1024px (lg) -> 1280px (xl) -> 1536px (2xl). Mobile-first: every component renders at 320px and grows up from there. Visual regression baselines exist for each breakpoint so layout drift surfaces in CI.

Spacing follows a 4px base scale (\`xs: 4px, sm: 8px, md: 16px, lg: 24px, xl: 32px, 2xl: 48px, 3xl: 64px\`) with section-level rhythm at \`section: 96px\`. Touch targets stay at 44x44px minimum below the lg breakpoint.

## Elevation & Depth

Eight elevation tokens (\`none, xs, sm, md, lg, xl, 2xl, inner\`) plus role-named aliases (\`card\`, \`card-hover\`, \`dropdown\`, \`modal\`, \`popover\`, \`toast\`, \`navbar\`, \`sidebar\`). Shadows are tuned per preset; flat presets like Brutalist use \`none\` across the board and convey hierarchy through borders or color contrast instead.

Reference values: \`sm = 3px 3px 0 0 rgba(0, 0, 0, 1)\`, \`md = 4px 4px 0 0 rgba(0, 0, 0, 1)\`, \`lg = 6px 6px 0 0 rgba(0, 0, 0, 1)\`. Cards default to \`sm\`, hover lifts to \`md\`, modals sit at \`xl\`.

## Shapes

Default component radius is \`0\` for buttons, inputs, and badges; \`0\` for cards; \`9999px\` for pill-shaped elements (avatars, badges with rounded variants). Brutalist and Editorial presets override every radius to \`0\` for a hard, architectural shape language.

## Motion

Static: motion is disabled at the component level. Hover and focus states use color only, no transition.

Per-preset durations: \`fast = 0ms\`, \`normal = 0ms\`, \`slow = 0ms\`. All transitions collapse to \`0ms\` under \`prefers-reduced-motion: reduce\`. The Arcana \`<FadeIn>\`, \`<Stagger>\`, \`<CountUp>\`, and \`<GradientBorder>\` motion primitives respect this token chain end-to-end.

## Components

Arcana ships 108 components in five tiers: primitives (Button, Input, Textarea, Select, Checkbox, Radio, Toggle, Badge, Avatar), composites (Card, Modal, Alert, Toast, Tabs, Accordion, Banner, Skeleton, Spinner, ErrorBoundary), 47 patterns (Navbar, Sidebar, DataTable, Hero, PricingCard, CommandPalette, and more), layout primitives (Stack, HStack, Grid, Container), and editor components (ColorPicker, FontPicker).

The front matter \`components\` section captures only the most-used atoms (\`button-primary\`, \`button-secondary\`, \`button-destructive\`, \`input-default\`, \`card-default\`, \`badge-default\`). Every property points at a token reference, so a Claude Design import lands with a coherent component layer rather than a flat token dump.

Variants (hover, active, disabled, focus) follow the \`<component>-<state>\` naming convention from the spec.

## Do's and Don'ts

- Do reference tokens, not literal values. \`{colors.primary}\` survives theme switches; \`#3b82f6\` doesn't.
- Do use \`primary\` for the single most important action per screen. Secondary CTAs use \`secondary\` or the \`outline\` variant.
- Do keep WCAG AA contrast (4.5:1 body, 3:1 large text and UI). Every contrast pair in the front matter has been verified.
- Do respect \`prefers-reduced-motion\`. Every transition collapses to 0ms under the user preference.
- Do scale typography with the fluid clamp() values; avoid breakpoint-specific font-size overrides.
- Don't mix radius scales on the same surface. Buttons and inputs share a radius; cards step up one tier.
- Don't introduce new color literals. Add a token if a hue is missing.
- Don't ship hover-only interactions. Every hover state needs a focus or tap equivalent.
- Don't use shadow elevation for hierarchy in flat presets (Brutalist, Editorial). Use borders or color contrast.
"
`;

exports[`presetToDesignMd > converts the light preset (default motion) 1`] = `
"---
version: alpha
name: Light
description: Warm stone palette with indigo accent - clean, precise, Notion-inspired
colors:
  primary: "#4f46e5"
  secondary: "#f5f5f4"
  tertiary: "#4f46e5"
  background: "#fafaf9"
  surface: "#ffffff"
  elevated: "#ffffff"
  foreground: "#1c1917"
  foreground-muted: "#a8a29e"
  border: "#e7e5e4"
  error: "#dc2626"
  on-primary: "#ffffff"
typography:
  headline-display:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 3rem
    fontWeight: 700
    lineHeight: 1.25
  headline-lg:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 2.25rem
    fontWeight: 700
    lineHeight: 1.25
  headline-md:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 1.875rem
    fontWeight: 700
    lineHeight: 1.25
  headline-sm:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 1.5rem
    fontWeight: 700
    lineHeight: 1.25
  body-lg:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 1.125rem
    fontWeight: 400
    lineHeight: 1.5
  body-md:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 1rem
    fontWeight: 400
    lineHeight: 1.5
  body-sm:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 0.875rem
    fontWeight: 400
    lineHeight: 1.5
  label-md:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 0.875rem
    fontWeight: 500
    lineHeight: 1.375
  label-sm:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 0.75rem
    fontWeight: 500
    lineHeight: 1.375
  label-strong:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 1rem
    fontWeight: 600
    lineHeight: 1.375
  code-md:
    fontFamily: "'JetBrains Mono', 'Fira Code', 'Cascadia Code', monospace"
    fontSize: 0.875rem
    fontWeight: 400
    lineHeight: 1.5
  display-xxl:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 4.5rem
    fontWeight: 700
    lineHeight: 1
rounded:
  none: 0px
  sm: 0.25rem
  md: 0.375rem
  lg: 0.5rem
  xl: 0.75rem
  2xl: 1rem
  full: 9999px
spacing:
  base: 1rem
  xs: 0.25rem
  sm: 0.5rem
  md: 1rem
  lg: 1.5rem
  xl: 2rem
  2xl: 3rem
  3xl: 4rem
  section: 6rem
components:
  button-primary:
    backgroundColor: "{colors.primary}"
    textColor: "{colors.on-primary}"
    rounded: "{rounded.md}"
    padding: "{spacing.md}"
    typography: "{typography.label-strong}"
  button-secondary:
    backgroundColor: "{colors.secondary}"
    textColor: "{colors.foreground}"
    rounded: "{rounded.md}"
    padding: "{spacing.md}"
    typography: "{typography.label-strong}"
  button-destructive:
    backgroundColor: "{colors.error}"
    textColor: "{colors.on-primary}"
    rounded: "{rounded.md}"
    padding: "{spacing.md}"
    typography: "{typography.label-strong}"
  input-default:
    backgroundColor: "{colors.surface}"
    textColor: "{colors.foreground}"
    borderColor: "{colors.border}"
    rounded: "{rounded.md}"
    padding: "{spacing.sm}"
    typography: "{typography.body-md}"
  card-default:
    backgroundColor: "{colors.surface}"
    textColor: "{colors.foreground}"
    rounded: "{rounded.lg}"
    padding: "{spacing.lg}"
  badge-default:
    backgroundColor: "{colors.surface}"
    textColor: "{colors.foreground-muted}"
    rounded: "{rounded.full}"
    padding: "{spacing.xs}"
    typography: "{typography.label-sm}"
---

# Light

## Overview

Light is the default Arcana preset. A clean neutral palette with a single indigo accent, sized for productivity dashboards and marketing surfaces alike. Comfortable density, generous whitespace, and a soft elevation system that reads as crafted rather than ornamental.

Comfortable density: 16px base spacing, 44px minimum touch targets, body text at 1.5 line-height.

## Colors

Light centers on a single \`primary\` accent (\`#4f46e5\`) on a \`background\` of \`#fafaf9\`. Every accent / surface / foreground pair below has been measured against WCAG 2.1 contrast ratios; ratios at or above 4.5:1 clear AA at body size.

### WCAG contrast pairs

| Pair | Foreground | Background | Ratio | AA body | AA large |
| --- | --- | --- | --- | --- | --- |
| foreground on background | \`#1c1917\` | \`#fafaf9\` | 16.74 | pass | pass |
| foreground on surface | \`#1c1917\` | \`#ffffff\` | 17.49 | pass | pass |
| foreground-muted on background | \`#a8a29e\` | \`#fafaf9\` | 2.41 | fail | fail |
| on-primary on primary | \`#ffffff\` | \`#4f46e5\` | 6.29 | pass | pass |
| border on background | \`#e7e5e4\` | \`#fafaf9\` | 1.20 | fail | fail |

## Typography

Display set in **Inter** for headline weight and presence; body in **Inter** for sustained reading; **JetBrains Mono** for code, telemetry, and tabular data. Sizes use \`clamp()\` for fluid scaling between 320px and 1536px viewports so layouts settle without breakpoint-specific overrides.

Eleven typography levels are emitted in the front matter, grouped as headlines (display, lg, md, sm), body (lg, md, sm), labels (md, sm, strong), and code (md). Display runs as large as the 7xl scale token allows; the \`display-xxl\` level captures it.

## Layout

A 5-breakpoint grid: 640px (sm) -> 768px (md) -> 1024px (lg) -> 1280px (xl) -> 1536px (2xl). Mobile-first: every component renders at 320px and grows up from there. Visual regression baselines exist for each breakpoint so layout drift surfaces in CI.

Spacing follows a 4px base scale (\`xs: 4px, sm: 8px, md: 16px, lg: 24px, xl: 32px, 2xl: 48px, 3xl: 64px\`) with section-level rhythm at \`section: 96px\`. Touch targets stay at 44x44px minimum below the lg breakpoint.

## Elevation & Depth

Eight elevation tokens (\`none, xs, sm, md, lg, xl, 2xl, inner\`) plus role-named aliases (\`card\`, \`card-hover\`, \`dropdown\`, \`modal\`, \`popover\`, \`toast\`, \`navbar\`, \`sidebar\`). Shadows are tuned per preset; flat presets like Brutalist use \`none\` across the board and convey hierarchy through borders or color contrast instead.

Reference values: \`sm = 0 1px 3px 0 rgba(28, 25, 23, 0.08), 0 1px 2px -1px rgba(28, 25, 23, 0.06)\`, \`md = 0 4px 6px -1px rgba(28, 25, 23, 0.07), 0 2px 4px -2px rgba(28, 25, 23, 0.05)\`, \`lg = 0 10px 15px -3px rgba(28, 25, 23, 0.08), 0 4px 6px -4px rgba(28, 25, 23, 0.04)\`. Cards default to \`sm\`, hover lifts to \`md\`, modals sit at \`xl\`.

## Shapes

Default component radius is \`0.375rem\` for buttons, inputs, and badges; \`0.5rem\` for cards; \`9999px\` for pill-shaped elements (avatars, badges with rounded variants). Brutalist and Editorial presets override every radius to \`0\` for a hard, architectural shape language.

## Motion

Default: balanced durations and easings. Suitable for productivity and marketing surfaces alike.

Per-preset durations: \`fast = 100ms\`, \`normal = 200ms\`, \`slow = 300ms\`. All transitions collapse to \`0ms\` under \`prefers-reduced-motion: reduce\`. The Arcana \`<FadeIn>\`, \`<Stagger>\`, \`<CountUp>\`, and \`<GradientBorder>\` motion primitives respect this token chain end-to-end.

## Components

Arcana ships 108 components in five tiers: primitives (Button, Input, Textarea, Select, Checkbox, Radio, Toggle, Badge, Avatar), composites (Card, Modal, Alert, Toast, Tabs, Accordion, Banner, Skeleton, Spinner, ErrorBoundary), 47 patterns (Navbar, Sidebar, DataTable, Hero, PricingCard, CommandPalette, and more), layout primitives (Stack, HStack, Grid, Container), and editor components (ColorPicker, FontPicker).

The front matter \`components\` section captures only the most-used atoms (\`button-primary\`, \`button-secondary\`, \`button-destructive\`, \`input-default\`, \`card-default\`, \`badge-default\`). Every property points at a token reference, so a Claude Design import lands with a coherent component layer rather than a flat token dump.

Variants (hover, active, disabled, focus) follow the \`<component>-<state>\` naming convention from the spec.

## Do's and Don'ts

- Do reference tokens, not literal values. \`{colors.primary}\` survives theme switches; \`#3b82f6\` doesn't.
- Do use \`primary\` for the single most important action per screen. Secondary CTAs use \`secondary\` or the \`outline\` variant.
- Do keep WCAG AA contrast (4.5:1 body, 3:1 large text and UI). Every contrast pair in the front matter has been verified.
- Do respect \`prefers-reduced-motion\`. Every transition collapses to 0ms under the user preference.
- Do scale typography with the fluid clamp() values; avoid breakpoint-specific font-size overrides.
- Don't mix radius scales on the same surface. Buttons and inputs share a radius; cards step up one tier.
- Don't introduce new color literals. Add a token if a hue is missing.
- Don't ship hover-only interactions. Every hover state needs a focus or tap equivalent.
- Don't use shadow elevation for hierarchy in flat presets (Brutalist, Editorial). Use borders or color contrast.
"
`;

exports[`presetToDesignMd > converts the midnight preset (calm motion, dense) 1`] = `
"---
version: alpha
name: Midnight
description: Deep navy with soft gold accents - premium, finance-grade, Bloomberg-inspired
colors:
  primary: "#fbbf24"
  secondary: "#292524"
  tertiary: "#fbbf24"
  background: "#0a0e1a"
  surface: "#101829"
  elevated: "#182036"
  foreground: "#f1f5f9"
  foreground-muted: "#64748b"
  border: "#64748b"
  error: "#dc2626"
  on-primary: "#0a0e1a"
typography:
  headline-display:
    fontFamily: "'Inter', 'Helvetica Neue', Arial, sans-serif"
    fontSize: 3rem
    fontWeight: 700
    lineHeight: 1.25
  headline-lg:
    fontFamily: "'Inter', 'Helvetica Neue', Arial, sans-serif"
    fontSize: 2.25rem
    fontWeight: 700
    lineHeight: 1.25
  headline-md:
    fontFamily: "'Inter', 'Helvetica Neue', Arial, sans-serif"
    fontSize: 1.875rem
    fontWeight: 700
    lineHeight: 1.25
  headline-sm:
    fontFamily: "'Inter', 'Helvetica Neue', Arial, sans-serif"
    fontSize: 1.5rem
    fontWeight: 700
    lineHeight: 1.25
  body-lg:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 1.125rem
    fontWeight: 400
    lineHeight: 1.5
  body-md:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 1rem
    fontWeight: 400
    lineHeight: 1.5
  body-sm:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 0.875rem
    fontWeight: 400
    lineHeight: 1.5
  label-md:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 0.875rem
    fontWeight: 500
    lineHeight: 1.375
  label-sm:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 0.75rem
    fontWeight: 500
    lineHeight: 1.375
  label-strong:
    fontFamily: Inter, system-ui, -apple-system, sans-serif
    fontSize: 1rem
    fontWeight: 600
    lineHeight: 1.375
  code-md:
    fontFamily: "'JetBrains Mono', 'Fira Code', monospace"
    fontSize: 0.875rem
    fontWeight: 400
    lineHeight: 1.5
  display-xxl:
    fontFamily: "'Inter', 'Helvetica Neue', Arial, sans-serif"
    fontSize: 4.5rem
    fontWeight: 700
    lineHeight: 1
rounded:
  none: 0px
  sm: 0.25rem
  md: 0.375rem
  lg: 0.5rem
  xl: 0.75rem
  2xl: 1rem
  full: 9999px
spacing:
  base: 1rem
  xs: 0.25rem
  sm: 0.5rem
  md: 1rem
  lg: 1.5rem
  xl: 2rem
  2xl: 3rem
  3xl: 4rem
  section: 6rem
components:
  button-primary:
    backgroundColor: "{colors.primary}"
    textColor: "{colors.on-primary}"
    rounded: "{rounded.md}"
    padding: "{spacing.md}"
    typography: "{typography.label-strong}"
  button-secondary:
    backgroundColor: "{colors.secondary}"
    textColor: "{colors.foreground}"
    rounded: "{rounded.md}"
    padding: "{spacing.md}"
    typography: "{typography.label-strong}"
  button-destructive:
    backgroundColor: "{colors.error}"
    textColor: "{colors.on-primary}"
    rounded: "{rounded.md}"
    padding: "{spacing.md}"
    typography: "{typography.label-strong}"
  input-default:
    backgroundColor: "{colors.surface}"
    textColor: "{colors.foreground}"
    borderColor: "{colors.border}"
    rounded: "{rounded.md}"
    padding: "{spacing.sm}"
    typography: "{typography.body-md}"
  card-default:
    backgroundColor: "{colors.surface}"
    textColor: "{colors.foreground}"
    rounded: "{rounded.lg}"
    padding: "{spacing.lg}"
  badge-default:
    backgroundColor: "{colors.surface}"
    textColor: "{colors.foreground-muted}"
    rounded: "{rounded.full}"
    padding: "{spacing.xs}"
    typography: "{typography.label-sm}"
---

# Midnight

## Overview

Midnight is for premium, finance-grade interfaces. Deep navy backgrounds carry soft gold accents; the palette evokes Bloomberg terminals and overnight trading desks. Dense data layouts stay legible because every accent / surface pair is contrast-verified against WCAG AA.

Compact-leaning: tighter spacing on data rows, 14px base body text, generous gutters between dashboard regions.

## Colors

Midnight centers on a single \`primary\` accent (\`#fbbf24\`) on a \`background\` of \`#0a0e1a\`. Every accent / surface / foreground pair below has been measured against WCAG 2.1 contrast ratios; ratios at or above 4.5:1 clear AA at body size.

### WCAG contrast pairs

| Pair | Foreground | Background | Ratio | AA body | AA large |
| --- | --- | --- | --- | --- | --- |
| foreground on background | \`#f1f5f9\` | \`#0a0e1a\` | 17.58 | pass | pass |
| foreground on surface | \`#f1f5f9\` | \`#101829\` | 16.18 | pass | pass |
| foreground-muted on background | \`#64748b\` | \`#0a0e1a\` | 4.05 | fail | pass |
| on-primary on primary | \`#0a0e1a\` | \`#fbbf24\` | 11.53 | pass | pass |
| border on background | \`#64748b\` | \`#0a0e1a\` | 4.05 | fail | pass |

## Typography

Display set in **Inter** for headline weight and presence; body in **Inter** for sustained reading; **JetBrains Mono** for code, telemetry, and tabular data. Sizes use \`clamp()\` for fluid scaling between 320px and 1536px viewports so layouts settle without breakpoint-specific overrides.

Eleven typography levels are emitted in the front matter, grouped as headlines (display, lg, md, sm), body (lg, md, sm), labels (md, sm, strong), and code (md). Display runs as large as the 7xl scale token allows; the \`display-xxl\` level captures it.

## Layout

A 5-breakpoint grid: 640px (sm) -> 768px (md) -> 1024px (lg) -> 1280px (xl) -> 1536px (2xl). Mobile-first: every component renders at 320px and grows up from there. Visual regression baselines exist for each breakpoint so layout drift surfaces in CI.

Spacing follows a 4px base scale (\`xs: 4px, sm: 8px, md: 16px, lg: 24px, xl: 32px, 2xl: 48px, 3xl: 64px\`) with section-level rhythm at \`section: 96px\`. Touch targets stay at 44x44px minimum below the lg breakpoint.

## Elevation & Depth

Eight elevation tokens (\`none, xs, sm, md, lg, xl, 2xl, inner\`) plus role-named aliases (\`card\`, \`card-hover\`, \`dropdown\`, \`modal\`, \`popover\`, \`toast\`, \`navbar\`, \`sidebar\`). Shadows are tuned per preset; flat presets like Brutalist use \`none\` across the board and convey hierarchy through borders or color contrast instead.

Reference values: \`sm = 0 1px 2px 0 rgba(0, 0, 0, 0.3)\`, \`md = 0 4px 6px -1px rgba(0, 0, 0, 0.35), 0 2px 4px -2px rgba(0, 0, 0, 0.3)\`, \`lg = 0 10px 15px -3px rgba(0, 0, 0, 0.35), 0 4px 6px -4px rgba(0, 0, 0, 0.25)\`. Cards default to \`sm\`, hover lifts to \`md\`, modals sit at \`xl\`.

## Shapes

Default component radius is \`0.375rem\` for buttons, inputs, and badges; \`0.5rem\` for cards; \`9999px\` for pill-shaped elements (avatars, badges with rounded variants). Brutalist and Editorial presets override every radius to \`0\` for a hard, architectural shape language.

## Motion

Calm: durations slightly longer than default, easings lean ease-in-out. Reveals settle rather than snap.

Per-preset durations: \`fast = 120ms\`, \`normal = 240ms\`, \`slow = 360ms\`. All transitions collapse to \`0ms\` under \`prefers-reduced-motion: reduce\`. The Arcana \`<FadeIn>\`, \`<Stagger>\`, \`<CountUp>\`, and \`<GradientBorder>\` motion primitives respect this token chain end-to-end.

## Components

Arcana ships 108 components in five tiers: primitives (Button, Input, Textarea, Select, Checkbox, Radio, Toggle, Badge, Avatar), composites (Card, Modal, Alert, Toast, Tabs, Accordion, Banner, Skeleton, Spinner, ErrorBoundary), 47 patterns (Navbar, Sidebar, DataTable, Hero, PricingCard, CommandPalette, and more), layout primitives (Stack, HStack, Grid, Container), and editor components (ColorPicker, FontPicker).

The front matter \`components\` section captures only the most-used atoms (\`button-primary\`, \`button-secondary\`, \`button-destructive\`, \`input-default\`, \`card-default\`, \`badge-default\`). Every property points at a token reference, so a Claude Design import lands with a coherent component layer rather than a flat token dump.

Variants (hover, active, disabled, focus) follow the \`<component>-<state>\` naming convention from the spec.

## Do's and Don'ts

- Do reference tokens, not literal values. \`{colors.primary}\` survives theme switches; \`#3b82f6\` doesn't.
- Do use \`primary\` for the single most important action per screen. Secondary CTAs use \`secondary\` or the \`outline\` variant.
- Do keep WCAG AA contrast (4.5:1 body, 3:1 large text and UI). Every contrast pair in the front matter has been verified.
- Do respect \`prefers-reduced-motion\`. Every transition collapses to 0ms under the user preference.
- Do scale typography with the fluid clamp() values; avoid breakpoint-specific font-size overrides.
- Don't mix radius scales on the same surface. Buttons and inputs share a radius; cards step up one tier.
- Don't introduce new color literals. Add a token if a hue is missing.
- Don't ship hover-only interactions. Every hover state needs a focus or tap equivalent.
- Don't use shadow elevation for hierarchy in flat presets (Brutalist, Editorial). Use borders or color contrast.
"
`;
